--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -2,7 +2,7 @@
     display: flex;
     margin: 0 2%;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     justify-content: space-evenly;
     padding: 5px;
 
