--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -1,39 +1,56 @@
-.headerC{
+*{
+
+}
+body{
+
+}
+header{
+    margin: auto;
+    position: fixed;
     display: flex;
     width: 100%;
     align-items: center;
     justify-content: space-between;
     background-color: black;
-   border-bottom-width: 10px;
-   border-bottom-style: groove;
-   border-bottom-color: white;
-   border-radius: 2%;
+    transition: 0.6;
+    padding: 40px 15px;
+    z-index: 1000000;
+}
+header .logo{
+    position: relative;
+    color: #fff;
+    text-decoration: none;
+    font-size: 2em;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    transition: 0.6s;
+}
+nav{
+    position: fixed;
+    width: ;
 }
 
-.titujt{
- list-style: none;
- display: flex;
- justify-content: center;
+header ul{
+     position: relative;
+     display: flex;
+     justify-content: center;
+     align-items: center;
 }
-
-.titulli{
-    padding: 2% 3%;
-    color: white;
-    cursor: pointer;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+header.black ul{
+    background: #000;
 }
-
-.titulli:hover{
-background-color: white;
-color: black;
+header ul li{
+    position: relative;
+    list-style: none;
 }
-.image{
-    margin-top: 1%;
-    display: flex;
-    width: 90px;
-    height: 90px;
-    padding-left: 2%;
-    padding-bottom: 1.5%;
+header ul li a{
+    position: relative;
+    padding: 0 15px;
+    text-decoration: none;
+    color: #fff;
+    letter-spacing: 2px;
+    font-size: larger;
+    transition: 0.6s;
 }
  .search{
     margin-right: 1%;
