--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -66,6 +66,69 @@ main {
     }
 }
 
+/* LogIn/register css */
+
+
+.LogIn-Register{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+    background: url('login.jpg');
+    background-size: cover;
+}
+.LogIn-Register form{
+    margin-top: 50px;
+    text-align: center;
+}
+.LogIn-Register input{
+    display: block;
+    width: 350px;
+    height: 40px;
+    margin: 20px;
+    border: none;
+    border-bottom: 1px solid black;
+    outline: none;
+    font-size: 20px;
+    background: transparent;
+}
+.LogIn-Register button{
+    width: 250px;
+    height: 40px;
+    border-radius: 20px;
+    font-size: 20px;
+    background-color: rgb(114, 203, 233);
+    border: none;
+    color: white;    
+    margin-top: 30px;
+    cursor: pointer;
+}
+.forgot{
+    display: flex;
+    justify-content: end;
+}
+.forgot p{
+    margin-right: 20px;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 12px;
+    padding: 0;
+    cursor: pointer;
+}
+.forgot p:hover{
+    color: darkblue;
+}
+.LogIn-Register button:hover{
+    background-color: rgb(25, 119, 150);
+}
+.LogIn-Register form h1{
+    margin-bottom: 30px;
+}
+
+/* Header css */
+
+
+
 header {
     width: 100%;
     height: 100vh;
@@ -243,6 +306,11 @@ nav ul li a {
     object-fit: cover;
 
 }
+
+
+/* footer css */
+
+
 
 .footerC {
     background-color: #111;
