--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -133,34 +133,25 @@ main {
 header {
     width: 100%;
     height: 100vh;
-    background: url(twitter-3-logo-png-transparent.png) no-repeat 50% 50%;
-    background-size: cover;
-    background-attachment: fixed;
 }
 
 nav {
     position: fixed;
     width: 100%;
+   
 }
-
-nav ul {
-    list-style: none;
-    background: rgba(0, 0, 0, 0);
-    overflow: hidden;
-    color: white;
-    padding: 0;
-    align-items: center;
-    margin: 0;
-    transition: 1s;
+nav ul{
+    margin-left: 10%;
+    font-weight: bold;
 }
-
-nav.black ul {
+nav.black{
     background: #000;
 }
 
 nav ul li {
     display: inline-block;
-    padding: 20px;
+    padding: 14px;
+    padding-right: 4%;
 }
 
 nav ul li a {
@@ -168,14 +159,22 @@ nav ul li a {
     color: #fff;
     letter-spacing: 2px;
     font-size: 18px;
-    transition: 0.6s;
+    transition: 1s;
     font-family: sans-serif;
     text-transform: uppercase;
 }
+nav ul li:hover{
+background-color: #fff;
+border-radius: 3%;
+}
+nav ul li a:hover{
+    color: #000;
+}
 
-.search {
-    margin-right: 1%;
-    position: relative;
+nav .search {
+    margin-left: 80%;
+    margin-top:0.5%;
+    position: fixed;
     width: 60px;
     height: 60px;
     background: white;
@@ -185,11 +184,12 @@ nav ul li a {
     overflow: hidden;
 }
 
-.search.active {
-    width: 350px;
+nav .search.active {
+
+    width: 400px;
 }
 
-.search .icon {
+nav .search .icon {
     position: absolute;
     top: 0;
     left: 0;
@@ -204,7 +204,7 @@ nav ul li a {
     cursor: pointer;
 }
 
-.search .icon::before {
+nav .search .icon::before {
     content: '';
     position: absolute;
     width: 15px;
@@ -214,7 +214,7 @@ nav ul li a {
     transform: translate(-4px, -4px) rotate(315deg);
 }
 
-.search .icon::after {
+nav .search .icon::after {
     content: '';
     position: absolute;
     width: 3px;
@@ -223,7 +223,7 @@ nav ul li a {
     transform: translate(6px, 6px) rotate(315deg);
 }
 
-.search .input {
+nav .search .input {
     position: relative;
     width: 300px;
     height: 60px;
@@ -232,7 +232,7 @@ nav ul li a {
     justify-content: center;
 }
 
-.search .input input {
+nav .search .input input {
     position: absolute;
     width: 100%;
     height: 73%;
@@ -242,7 +242,7 @@ nav ul li a {
     padding: 10px;
 }
 
-.clear {
+nav .clear {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -254,9 +254,10 @@ nav ul li a {
     display: flex;
     justify-content: center;
     align-items: center;
+   
 }
 
-.clear::before {
+nav .clear::before {
     position: absolute;
     content: '';
     width: 1px;
@@ -265,7 +266,7 @@ nav ul li a {
     transform: rotate(45deg);
 }
 
-.clear::after {
+nav .clear::after {
     position: absolute;
     content: '';
     width: 1px;
@@ -273,7 +274,6 @@ nav ul li a {
     background-color: black;
     transform: rotate(315deg);
 }
-
 .photoLajme {
     display: flex;
     margin: 0 2%;
@@ -311,58 +311,83 @@ nav ul li a {
 
 /* footer css */
 
+footer{
+background-color: #111;
+}
 
-
-.footerC {
-    background-color: #111;
-    padding-bottom: 0.5%;
-    padding-top: 0.5%;
-    border-top-width: 10px;
-    border-top-style: groove;
-    border-top-color: white;
-    border-radius: 3%;
-    color: white;
-
-
+.FooterC {
+width: 100%;
+padding: 70px 30px 20px;
 }
 
 .logot {
     display: flex;
-    justify-content: center;
-    padding-top: 2%;
-    justify-content: space-around;
-
+    justify-content:space-around;
 }
-
-.referencat {
-    font-size: larger;
-    display: flex;
-    padding: 20px 20px;
-    justify-content: center;
-    list-style: none;
-    justify-content: space-between;
-    color: white;
-
-
-}
-
-.referenca a {
+.logot a{
     text-decoration: none;
+    padding: 10px;
+    background-color: #fff;
+    margin: 10px;
+    border-radius: 60%;
+}
+.logot a i{
+    font-size: 2em;
+    color: black;
+    opacity: 0.9;
+}
+.logot a:hover{
+   background-color: #111;
+    transition: 0.5s;
+}
+.logot a:hover i{
+    color: #fff;
+    transition: 0.5;
+}
+.referencat{
+    margin: 30px 0;
+}
+.referencat ul{
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+
+.referencat ul li a{
+    font-weight: bold;
+text-transform: uppercase;
+    text-decoration: none;
+    margin: 20px;
+    font-size: 1.3em;
     color: white;
     opacity: 0.7;
-    transition: 0.4s;
+    transition: 0.5s;
 }
 
-.referenca a:hover {
-    opacity: 1.5;
+.referencat ul li a:hover {
+    opacity: 1;
 }
 
 .Copy {
     background-color: #000;
     padding: 17px;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-size: 120%;
+    
 }
 
 .Copy p {
     color: white;
+}
+@media all and (max-width:850px){
+    .referencat ul{
+        flex-direction: column;
+    }
+    .referencat ul li{
+        width: 100%;
+        text-align: center;
+        margin: 15px;
+        padding: 10px;
+    }
 }
