--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -24,6 +24,9 @@ main {
     cursor: pointer;
 }
 
+.box:hover{
+    box-shadow: 15px 15px 40px 5px rgba(0, 0, 0, 0.6);
+}
 .box img {
     min-height: 200px;
     background-color: red;
@@ -125,6 +128,65 @@ main {
 .LogIn-Register form h1{
     margin-bottom: 30px;
 }
+
+/* News format css */
+
+.NewsPage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.NewsPage div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    max-width: 1300px;
+}
+
+.NewsPage div h3{
+    font-size: 20px;
+}
+
+.NewsPage img {
+    min-width: 700px;
+    min-height: 300px;
+    max-height: 400px;
+    max-width: 800px;
+    object-fit: cover;
+}
+
+.title {
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+    align-items: center;
+}
+
+@media all and (max-width:700px) {
+    .NewsPage div {
+        max-width: 700px;
+    }
+
+    .NewsPage img {
+        max-width: 350px;
+        max-height: 100px;
+    }
+
+    .title {
+        font-size: 12px;
+    }
+    .NewsPage {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+}
+
+
 
 /* Header css */
 
