--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -195,6 +195,9 @@ main {
 header {
     width: 100%;
     height: 100vh;
+    background-image: url(360_F_402017867_lK95Sff724B35wAQ76OzaMoRbP70Z14B.jpg);
+    background-size: cover;
+    z-index: 100000;
 }
 
 nav {
