--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -1,8 +1,13 @@
-html,
-body {
+*{
     margin: 0;
     padding: 0;
-    width: 100%;
+}
+body {
+    min-height: 100vh;
+    background-image: url(global-technology-background-with-text-space_1017-19388.avif);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     font-family: 'Poppins', sans-serif;
 }
  /*  news cointainer css */
@@ -190,189 +195,91 @@ main {
 
 /* Header css */
 
-
-
-header {
-    width: 100%;
-    height: 100vh;
-    background-image: url(360_F_402017867_lK95Sff724B35wAQ76OzaMoRbP70Z14B.jpg);
-    background-size: cover;
-    z-index: 100000;
-}
-
 nav {
     position: fixed;
-    width: 100%;
-   
-}
-nav ul{
-    margin-left: 10%;
-    font-weight: bold;
-}
-nav.black{
-    background: #000;
-}
-
-nav ul li {
-    display: inline-block;
-    padding: 14px;
-    padding-right: 4%;
-}
-
-nav ul li a {
-    text-decoration: none;
-    color: #fff;
-    letter-spacing: 2px;
-    font-size: 18px;
-    transition: 1s;
-    font-family: sans-serif;
+    
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     text-transform: uppercase;
-}
-nav ul li:hover{
-background-color: #fff;
-border-radius: 3%;
-}
-nav ul li a:hover{
-    color: #000;
-}
+    letter-spacing: 2px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 
-nav .search {
-    margin-left: 80%;
-    margin-top:0.5%;
-    position: fixed;
-    width: 60px;
-    height: 60px;
-    background: white;
-    border-radius: 60px;
-    transition: 0.5s;
-    box-shadow: 0 0 0 2px black;
-    overflow: hidden;
-}
-
-nav .search.active {
-
-    width: 400px;
-}
-
-nav .search .icon {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 60px;
-    height: 60px;
-    background-color: white;
-    border-radius: 60px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-    cursor: pointer;
-}
-
-nav .search .icon::before {
-    content: '';
-    position: absolute;
-    width: 15px;
-    height: 15px;
-    border: 3px solid black;
-    border-radius: 50%;
-    transform: translate(-4px, -4px) rotate(315deg);
-}
-
-nav .search .icon::after {
-    content: '';
-    position: absolute;
-    width: 3px;
-    height: 12px;
-    background-color: black;
-    transform: translate(6px, 6px) rotate(315deg);
-}
-
-nav .search .input {
-    position: relative;
-    width: 300px;
-    height: 60px;
-    left: 60px;
-    display: flex;
-    justify-content: center;
-}
-
-nav .search .input input {
-    position: absolute;
-    width: 100%;
-    height: 73%;
-    border: none;
-    outline: none;
-    font-size: 20px;
-    padding: 10px;
-}
-
-nav .clear {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 15px;
-    height: 15px;
-    right: 15px;
-    background-color: white;
-    cursor: pointer;
-    display: flex;
-    justify-content: center;
-    align-items: center;
    
 }
 
-nav .clear::before {
-    position: absolute;
-    content: '';
-    width: 1px;
-    height: 15px;
-    background-color: black;
-    transform: rotate(45deg);
-}
-
-nav .clear::after {
-    position: absolute;
-    content: '';
-    width: 1px;
-    height: 15px;
-    background-color: black;
-    transform: rotate(315deg);
-}
-.photoLajme {
+nav ul{
+    background-color: #fff;
+    width: 109%;
+    list-style: none;
     display: flex;
-    margin: 0 2%;
-    flex-direction: row;
-    flex-wrap: wrap-reverse;
-    justify-content: space-evenly;
-    padding: 5px;
+    justify-content: flex-end;
+    align-items: center;
 
 }
-
-.rubrika {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin: 2% 0;
-    width: 500px;
-    height: 280px;
-
+nav li {
+    height: 50px;
 }
 
-.Pershkrimi {
+nav a {
+    height: 100%;
+    padding: 0 30px;
+    text-decoration: none;
+    color: black;
     display: flex;
+    align-items: center;
+}
+nav a:hover{
+background-color: #f0f0f0;
+font-size: larger;
+font-weight: bold;
+}
+nav :first-child{
+    color: rgb(0, 0, 0);
+    letter-spacing: 5px;
+    font-size: x-large;
+    margin-right:  auto;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 999;
+    background-color: rgba(255, 255, 255, 0.279);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    display: none;
     flex-direction: column;
-    width: 450px;
+    align-items: flex-start;
+    justify-content: flex-start;
+    
 }
-
-.rubrika>img {
-    width: 450px;
-    height: 250px;
-    object-fit: cover;
-
+.sidebar li{
+    width: 100%;
 }
-
+.sidebar a{
+    width: 100%;
+}
+.butoni{
+    display: none;
+}
+@media(max-width: 2025px){
+    .hideOnMobile{
+        display: none;
+    }
+    .butoni{
+        display: block;
+    }
+}
+@media(max-width: 470px){
+    .sidebar{
+        width: 100%;
+    }
+    .largo{
+        display: none;
+    }
+}
 
 /* footer css */
 
@@ -381,8 +288,8 @@ background-color: #111;
 }
 
 .FooterC {
-width: 100%;
-padding: 70px 30px 20px;
+width: auto;
+padding: 50px 40px 20px;
 }
 
 .logot {
@@ -391,10 +298,10 @@ padding: 70px 30px 20px;
 }
 .logot a{
     text-decoration: none;
-    padding: 10px;
+    padding: 15px;
     background-color: #fff;
     margin: 10px;
-    border-radius: 60%;
+    border-radius: 40%;
 }
 .logot a i{
     font-size: 2em;
@@ -454,5 +361,15 @@ text-transform: uppercase;
         text-align: center;
         margin: 15px;
         padding: 10px;
+    }
+}
+@media(max-width:500px){
+    .Copy{
+        font-size: smaller;
+    }
+}
+@media(max-width:600px){
+    .FooterC{
+        width: auto;
     }
 }
