--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -372,3 +372,12 @@ text-transform: uppercase;
         width: auto;
     }
 }
+.ekonomi{
+    display: flex;
+    flex-direction: column;
+    max-width: 450px;
+    box-shadow: 7px 7px 25px 1px rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
+    overflow: hidden;
+    cursor: pointer;
+}
