--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -372,12 +372,55 @@ text-transform: uppercase;
         width: auto;
     }
 }
-.ekonomi{
-    display: flex;
-    flex-direction: column;
-    max-width: 450px;
-    box-shadow: 7px 7px 25px 1px rgba(0, 0, 0, 0.6);
-    border-radius: 5px;
-    overflow: hidden;
-    cursor: pointer;
+.about-us{
+  height: 100vh;
+  width: 100%;
+  padding: 90px 0;
+  background: #ddd;
+}
+
+.about{
+  width: 1130px;
+  max-width: 85%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.text{
+  width: 540px;
+}
+.text h2{
+  font-size: 90px;
+  font-weight: 600;
+  margin-bottom: 10px;
+
+}
+.text h5{
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+span{
+  color: #4070f4;
+}
+
+.data{
+  margin-top: 30px;
+}
+.hire{
+  font-size: 30px;
+  background: #111;
+  color: #fff;
+  text-decoration: none;
+  border: none;
+  padding: 8px 25px;
+  font-weight: bold;
+  border-radius: 6px;
+  transition: 0.5s;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.hire:hover{
+    background: #f0f0f0;
+    color: #111;
 }
