--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -193,14 +193,16 @@ main {
 
 
 /* Header css */
-
+header {
+    z-index: 2;
+  }
 nav {
     position: fixed;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     text-transform: uppercase;
     letter-spacing: 2px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
+    z-index: 2;
    
 }
 
@@ -477,19 +479,79 @@ span{
         bottom: 20px;
       }
     }
+.slideshow-container {
+  max-width: 100%;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 20px;
+  margin-top: 53px;
+  z-index: 1;
+}
 
-    .slider-container {
-        overflow: hidden;
-        position: relative;
-        width: 100%;
-        max-height: 400px;
-    }
 
-    .slider {
-        display: flex;
-        transition: transform 0.5s ease-in-out;
-    }
+.mySlides {
+  display: none;
+}
 
-    .slide {
-        min-width: 100%;
+
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+@media (max-width: 700px){
+    .slideshow-container {
+        margin-top: 100px;
     }
+}
