--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -207,7 +207,11 @@ main {
 
 /* Header css */
 header {
-    z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
 }
 
 nav {
@@ -245,7 +249,7 @@ nav a {
 
 nav a:hover {
     background-color: #f0f0f0;
-    font-size: larger;
+    
     font-weight: bold;
 }
 
@@ -313,7 +317,7 @@ nav .dropdown:hover .dropdown-content {
     display: none;
 }
 
-@media(max-width: 1850px) {
+@media(max-width: 2556px) {
     .hideOnMobile {
         display: none;
     }
@@ -331,6 +335,9 @@ nav .dropdown:hover .dropdown-content {
     .largo {
         display: none;
     }
+}
+main{
+    margin-top: 60px;
 }
 
 /* footer css */
@@ -439,8 +446,9 @@ footer {
 .about-us {
     height: 100vh;
     width: 100%;
-    padding: 90px 0;
+    padding: 80px 0;
     background: #ddd;
+    margin-top: 0px;
 }
 
 .about {
@@ -609,4 +617,9 @@ span {
     .slideshow-container {
         margin-top: 100px;
     }
+}
+
+#welcome{
+    display: none;
+
 }
