--- a/Stilizimi.css
+++ b/Stilizimi.css
@@ -15,6 +15,7 @@ body {
 /*  news cointainer css */
 main {
     display: flex;
+    flex-wrap: wrap-reverse;
     flex-direction: column;
     gap: 25px;
     padding: 10px;
